--- a/app/components/users/user.dashboard.companies.panel.html
+++ b/app/components/users/user.dashboard.companies.panel.html
@@ -19,5 +19,5 @@
             <div ng-if="$last" style="margin-bottom:-11px;"></div>
         </div>
     </div>
-    <div ng-if="!profile.companies[type.name]" style="padding-top: 10px;">None yet..&nbsp;<a ng-if="profile.company.key !== global.user.key" style="font-size:12px;" ng-href="{{$rootScope.global.location.key + '/companies/add'}}">&nbsp; add one?</a></div>
+    <div ng-if="!profile.companies[type.name]" style="padding-top: 10px;">None yet..&nbsp;<a ng-if="profile.user.key == global.user.key" style="font-size:12px;" ng-href="{{$rootScope.global.location.key + '/companies/add'}}">&nbsp; add one?</a></div>
 </div>
