--- a/app/components/header/header_small.html
+++ b/app/components/header/header_small.html
@@ -1,6 +1,6 @@
 <div class="small-header">
     <div class="hpanel">
-        <div class="panel-body" style="width: 100%;" ng-class="{'header-embedded' : nav.embedded, 'no-sides' : !nav.embedded}">
+        <div class="panel-body" style="width: 100%;" ng-class="{'header-embedded' : global.embedded, 'no-sides' : !global.embedded}">
             <div class="pull-left" tour-step order="1" title="People and Companies" content="To view people by role or industry, or sort companies by investment, visit the People and Company pages." placement="bottom">
                 <ul ng-if="global.community.type !== 'user' && global.community.type !== 'company'" class="header-nav">
                     <li ui-sref="community.dashboard" ng-class="{ 'active' : nav.state.current.name == 'community.dashboard' }">
