--- a/app/components/companies/company.dashboard.network.panel.html
+++ b/app/components/companies/company.dashboard.network.panel.html
@@ -10,11 +10,11 @@
         </div>
     </div>
     <div class="col-xs-4">
-        <h3 class="text-info pull-right">{{::profile.company.team.count[type.name]}}</h3>
+        <h3 class="text-info pull-right">{{profile.company.team.count[type.name]}}</h3>
     </div>
 </div>
 <div class="panel-footer" style="background: #fff; text-align: center; padding-bottom:32px;">
-    <div ng-repeat="item in ::profile.company.team[type.name]" style="text-align: left;">
+    <div ng-repeat="item in profile.company.team[type.name]" style="text-align: left;">
         <div>
             <div class="row" ng-include="'components/users/user.list.item.html'"></div>
         </div>
